# rust_3d_renderer

./: Cargo.toml
src/: camera.rs  lib.rs  main.rs  mesh.rs  triangle.rs
