[package]
name = "rust_3d_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
rayon = "1.5.3"

[dependencies.sdl2]
version = "^0"
default-features = false
features = ["gfx"]

